# ariel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SPECIFICATION.md  docker-compose.dev.yml  docker-compose.yml  henry_james_sample.txt  justfile  pyproject.toml  simple_test.txt  small_test.txt  tempest_test.txt
frontend/: .dockerignore  Dockerfile  Dockerfile.test  nginx.conf  package.json  playwright.config.ts
frontend/.features-gen/: api-integration.feature.spec.js  audiobook-converter.feature.spec.js  end-to-end-workflow.feature.spec.js  error-handling.feature.spec.js
frontend/playwright-report/: index.html
frontend/src/: App.tsx
frontend/test-results/: .last-run.json
frontend/test-results/audiobook-converter.featur-71ba4-udiobook-from-analyzed-text-chromium/: error-context.md
frontend/test-results/audiobook-converter.featur-8774d-le-upload-errors-gracefully-chromium/: error-context.md
frontend/tests/: mock-server.ts
frontend/tests/features/: api-integration.feature  audiobook-converter.feature  end-to-end-workflow.feature  error-handling.feature
frontend/tests/steps/: api-integration.steps.ts  audiobook-converter.steps.ts  end-to-end-workflow.steps.ts  error-handling.steps.ts
samples/: alice_sample.txt  simple_test.txt  tempest_test.txt
src/aleph/: __init__.py  __main__.py  cli.py  models.py
src/aleph/analyzers/: basic.py  statistical.py
src/aleph/compilers/: __init__.py  basic.py
src/aleph/core/: __init__.py  config.py  converter.py  interfaces.py  pipeline.py
src/aleph/generators/: __init__.py  edge_tts.py
src/aleph/parsers/: __init__.py  basic.py
src/ariel/: __init__.py  __main__.py  cli.py  models.py
src/ariel/analyzers/: __init__.py
src/ariel/compilers/: __init__.py  basic.py
src/ariel/core/: __init__.py  config.py  converter.py  factory.py  interfaces.py  pipeline.py
src/ariel/generators/: __init__.py  coqui_tts.py  edge_tts.py  openai_tts.py
src/ariel/parsers/: __init__.py  advanced.py  basic.py
src/ariel/web/: __init__.py  app.py
tests/: integration_test.sh
