[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aleph"
version = "0.1.0"
description = "Transform public domain books into audiobooks with AI-generated voices"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer[all]>=0.9.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
aleph = "aleph.__main__:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["aleph"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true