[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariel"
version = "0.1.0"
description = "Transform public domain books into audiobooks with AI-generated voices"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer[all]>=0.9.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=4.2.0",
]

[project.scripts]
ariel = "ariel.__main__:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ariel"]

[tool.hatch.build.targets.wheel]
packages = ["src/ariel"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

